HelloUltraviolet/Fixtures/RejectedSource/Expressions/RaceHandlerTypeMismatch/Expected.uv
//! Expected diagnostic metadata for the RaceHandlerTypeMismatch rejected-source specimen.

expectedDiagnostic("E-CON-0261", "rule.21.Race-Handler-Type-Err")
